# erp-nexus

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yml  ci.yml
apps/: __init__.py
apps/core_api/: api.py  apps.py  auth.py  permissions.py  rate_limit.py
apps/core_api/v1/: audit.py  auth.py  events.py  marketplace.py  modules.py  pages.py  password_reset.py  stats.py  users.py
apps/core_audit/: __init__.py  admin.py  apps.py  models.py
apps/core_audit/migrations/: 0001_initial.py
apps/core_auth/: __init__.py  admin.py  apps.py  models.py
apps/core_auth/migrations/: 0001_initial.py  __init__.py
apps/core_companies/: __init__.py  admin.py  apps.py  middleware.py  models.py
apps/core_dashboard/: apps.py  context_processors.py
apps/core_events/: __init__.py  admin.py  apps.py  bus.py  models.py  signals.py  tasks.py
apps/core_groups/: __init__.py  admin.py  apps.py  models.py
apps/core_groups/migrations/: __init__.py  (+2 more)
apps/core_marketplace/: __init__.py  activation.py  admin.py  apps.py  manifest.py  models.py  registry.py
apps/core_pagebuilder/: __init__.py  admin.py  apps.py  models.py
apps/core_permissions/: __init__.py  admin.py  apps.py  models.py
apps/core_stats/: __init__.py  admin.py  apps.py  models.py
apps/core_users/: __init__.py  admin.py  apps.py  models.py
cli/: main.py
cli/commands/: creator.py  installer.py  uninstaller.py  validator.py
config/: nginx.conf
erp_nexus/: __init__.py  asgi.py  modules_enabled.py  settings.py  urls.py  wsgi.py
erp_nexus/settings/: __init__.py  base.py  development.py  production.py
module_system/: contracts.py  installer.py  validator.py
modules/: registry.json
modules/accounting_basic/: __init__.py
modules/demo_flow/: __meta__.py
modules/inventory_basic/: __init__.py  __meta__.py  admin.py  apps.py
tests/: test_admin_dashboard.py  test_api.py  test_audit.py  test_auth.py  test_cli.py  test_core_models.py  test_events.py  test_marketplace_sync.py  test_module_activation.py  test_multitenancy.py  test_users.py
(+39 files in other folders)
