[project]
name = "erp-nexus"
version = "0.1.0"
description = "ERP modular open-source con enfoque en simplicidad extrema"
authors = [{name = "Tu Nombre", email = "tu@email.com"}]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6.0",
    "semantic-version>=2.10.0",
    "django>=5.0,<5.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
